--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -405,5 +405,6 @@
     <string name="repo_add_to_homescreen">Repository shortcut created</string>
     <string name="issue_add_to_homescreen">Issue shortcut created</string>
     <string name="menu_enable_notifications">Notifications</string>
+    <string name="menu_enable_notifications_description">Enable android notifications</string>
 
 </resources>
