--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -417,4 +417,7 @@
     <string name="no_status_checks_num">No checks</string>
     <string name="one_status_checks_num">1 check</string>
     <string name="other_status_checks_num">%d checks</string>
+    <string name="app_settings_about">About</string>
+    <string name="pref_mark_as_read">Mark as read</string>
+    <string name="pref_mark_as_read_summary">Mark notifications as read when open</string>
 </resources>
