--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -430,4 +430,5 @@
     <string name="language">Language</string>
     <string name="gist_file_created_removed">Remove</string>
     <string name="gist_creator_remove_file">Remove file %s from current gist?</string>
+    <string name="issue_info">#%1$d opened %2$s by %3$s</string>
 </resources>
