--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -272,6 +272,7 @@
     <string name="profile_starreds">Starred repositories</string>
     <string name="profile_watched">Watched repositories</string>
     <string name="overview_fragment_title">Overview</string>
+    <string name="event_generic_by"><![CDATA[<b>%1$s</b> %2$s]]></string>
     <string name="event_watched_by"><![CDATA[<b>%1$s</b> watched <b>%2$s</b>]]></string>
     <string name="event_starred_by"><![CDATA[<b>%1$s</b> starred <b>%2$s</b>]]></string>
     <string name="event_forked_by"><![CDATA[<b>%1$s</b> forked <b>%2$s</b> to <b>%3$s</b>]]></string>
