Move assignee of Issue and PullRequest

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -432,4 +432,6 @@
     <string name="gist_file_created_removed">Remove</string>
     <string name="gist_creator_remove_file">Remove file %s from current gist?</string>
     <string name="issue_info">#%1$d opened %2$s by %3$s</string>
+    <string name="loading_collaborators">Loading collaborators</string>
+    <string name="changing_assignee">Changing assignee</string>
 </resources>
