--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -435,4 +435,5 @@
     <string name="loading_collaborators">Loading collaborators</string>
     <string name="changing_assignee">Changing assignee</string>
     <string name="share_intent_title">Share via...</string>
+    <string name="pref_repo_is_private">Is private</string>
 </resources>
