Updates from sdk

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -438,4 +438,5 @@
     <string name="pref_repo_is_private">Is private</string>
     <string name="welcome_button_enterprise">Github enterprise account</string>
     <string name="open_app">Open app!</string>
+    <string name="import_gitskarios_accounts">Import gitskarios accounts</string>
 </resources>
