--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -442,4 +442,7 @@
     <string name="event_list_filter">Filter events</string>
     <string name="clear_filters">Clear filter</string>
     <string name="app_updated">Gitsakrios has been updated</string>
+    <string name="create_repository_activity">New repository</string>
+    <string name="pref_repo_manage_gitignore">Add .gitignore</string>
+    <string name="pref_repo_manage_license">Add a license</string>
 </resources>
