Moving to RxJava

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -250,7 +250,7 @@
     <string name="issue_list_filter_search">Advanced filter</string>
     <string name="sync_folder">Refresh</string>
     <string name="ups">Ups…</string>
-    <string name="issue_detail_error">There was an error loading %1$s\n%2$s</string>
+    <string name="issue_detail_error">There was an error loading %1$s</string>
     <string name="action_share_issue">Share issue</string>
     <string name="time_ago_just_now">just now</string>
     <string name="action_add_assignee">Add assignee</string>
