--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -434,7 +434,7 @@
     <string name="issue_info">#%1$d opened %2$s by %3$s</string>
     <string name="loading_collaborators">Loading collaborators</string>
     <string name="changing_assignee">Changing assignee</string>
-    <string name="share_intent_title">Share via...</string>
+    <string name="share_intent_title">Share via…</string>
     <string name="pref_repo_is_private">Is private</string>
     <string name="welcome_button_enterprise">Github enterprise account</string>
     <string name="open_app">Open app!</string>
@@ -450,4 +450,6 @@
 
     <string name="changelog">Changelog</string>
     <string name="error_login_user">Error requesting user</string>
+    <string name="root">Root</string>
+    <string name="atelier_view_tag">AtelierViewTag</string>
 </resources>
