--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -452,4 +452,5 @@
   <string name="error_login_user">Error requesting user</string>
   <string name="root">Root</string>
   <string name="atelier_view_tag">AtelierViewTag</string>
+  <string name="error_loading_repos">Error loading repositories</string>
 </resources>
