add enterprise wlcome activity

--- a/app/src/enterprise/res/values/strings.xml
+++ b/app/src/enterprise/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="welcome_button_github">Github account</string>
+  <string name="github_enterprise_account">Github Enterprise</string>
+  <string name="github_account">Github Account</string>
 </resources>
