--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -458,4 +458,5 @@
   <string name="generateToken">Generate token</string>
   <string name="user_resume_about">About</string>
   <string name="repositories">Repositories</string>
+  <string name="user_resume_github">Github</string>
 </resources>
