events & fix about profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -459,4 +459,5 @@
   <string name="user_resume_about">About</string>
   <string name="repositories">Repositories</string>
   <string name="user_resume_github">Github</string>
+  <string name="events">EVENTS</string>
 </resources>
