--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -468,4 +468,5 @@
   <string name="invitation_message">Take a look at Gitskarios, Github on Android</string>
   <string name="invitation_deep_link">http://github.com/gitskarios/Gitskarios</string>
   <string name="invitation_cta">Invite</string>
+  <string name="select_browser">Select a browser</string>
 </resources>
