--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -470,4 +470,7 @@
   <string name="invitation_cta">Invite</string>
   <string name="select_browser">Select a browser</string>
   <string name="trash_content">Remove content</string>
+  <string name="enterprise_ad_gitskarios">GITSKARIOS</string>
+  <string name="enterprise_ad_for_ngithub_enteprise">FOR\nGITHUB ENTEPRISE</string>
+  <string name="enterprise_ad_try_it_now">Try it now</string>
 </resources>
