new login basic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -474,4 +474,8 @@
   <string name="enterprise_ad_for_ngithub_enteprise">FOR\nGITHUB ENTEPRISE</string>
   <string name="enterprise_ad_try_it_now">Try it now</string>
   <string name="app_theme_pref_title">App theme</string>
+  <string name="oauth_login">OAuth login</string>
+  <string name="write_otp_code">Write the code received from SMS</string>
+  <string name="write_otp_code_title">2fa Code</string>
+  <string name="write_otp_code_hint">code</string>
 </resources>
