fix download not work && permission request fix #358

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -478,4 +478,6 @@
   <string name="write_otp_code">Write the code received from SMS</string>
   <string name="write_otp_code_title">2fa Code</string>
   <string name="write_otp_code_hint">code</string>
+  <string name="external_storage_permission_request">Write permission is requested to download</string>
+  <string name="external_storage_permission_request_action">Settings</string>
 </resources>
