--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,9 @@
   <string name="action_settings">Settings</string>
   <string name="action_donate">Support development</string>
   <string name="no_gist_description">No description</string>
-  <string name="navigation_gists">Gists</string>
+  <string name="navigation_gists">My gists</string>
+  <string name="username_gists">%1$s gists</string>
+  <string name="navigation_gists_starred">Starred gists</string>
   <string name="title_profile">Profile</string>
   <string name="title_gists">Gists</string>
   <string name="navigation_profile">Profile</string>
