--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -483,4 +483,5 @@
   <string name="external_storage_permission_request">Write permission is requested to download</string>
   <string name="external_storage_permission_request_action">Settings</string>
   <string name="navigation_issues">Assigned issues</string>
+  <string name="unauthorized_login">Bad credentials</string>
 </resources>
