--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -485,4 +485,6 @@
   <string name="navigation_issues">Assigned issues</string>
   <string name="action_push">Enable push</string>
   <string name="unauthorized_login">Bad credentials</string>
+  <string name="notifications_all">ALL</string>
+  <string name="notifications_new">NEW</string>
 </resources>
