--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -491,4 +491,5 @@
   <string name="notifications_new">NEW</string>
   <string name="action_pull_request_add_comment">Add coment</string>
   <string name="action_pull_request_edit">Edit</string>
+  <string name="action_open_in_browser">Open in browser</string>
 </resources>
