--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -501,4 +501,5 @@
   <string name="action_open_in_browser">Open in browser</string>
   <string name="my_issues">Assigned issues</string>
   <string name="navigation_favorites">Favorites</string>
+  <string name="open_gitskarios_issue">Found bug?</string>
 </resources>
