--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -502,4 +502,5 @@
   <string name="my_issues">Assigned issues</string>
   <string name="navigation_favorites">Favorites</string>
   <string name="open_gitskarios_issue">Found bug?</string>
+  <string name="empty_repos">No repositories found</string>
 </resources>
