--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -503,4 +503,5 @@
   <string name="navigation_favorites">Favorites</string>
   <string name="open_gitskarios_issue">Found bug?</string>
   <string name="empty_repos">No repositories found</string>
+  <string name="content_description_verified_commit">Commit verified</string>
 </resources>
