--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -506,4 +506,5 @@
   <string name="content_description_verified_commit">Commit verified</string>
   <string name="milestone_issues_activity_title">Mileston: %s</string>
   <string name="new_issue_title">Creating issue on %s</string>
+  <string name="restart_app_apply_theme">Restart GitSkarios to apply the theme</string>
 </resources>
