Finish image uploader option

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -513,4 +513,8 @@
   <string name="imgur_uploading_image_title">Uploading image</string>
   <string name="imgur_uploading_image_text">%s</string>
   <string name="imgur_uploading_image_action_open">Open</string>
+  <string name="add_image_title">Add image</string>
+  <string name="add_image_by_link">By link</string>
+  <string name="add_image_by_upload">Upload image</string>
+  <string name="imgur_uploading_image_title_done">Image uploaded</string>
 </resources>
