--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -518,10 +518,12 @@
   <string name="add_image_by_upload">Upload image</string>
   <string name="imgur_uploading_image_title_done">Image uploaded</string>
   <string name="new_content_title">Creating file on %s</string>
+  <string name="edit_content_title">Edit file %s</string>
   <string name="content_message_mandatory">Commit message is mandatory</string>
   <string name="content_body_mandatory">Content body is mandatory</string>
   <string name="creating_content">Creating content</string>
   <string name="commit_message">Commit message</string>
   <string name="file_body">File body</string>
   <string name="file_path">Path</string>
+  <string name="edit_content">Edit content</string>
 </resources>
