Move github flavor to main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -526,5 +526,6 @@
   <string name="file_body">File body</string>
   <string name="file_path">Path</string>
   <string name="edit_content">Edit content</string>
+  <string name="invitation_custom_image">https://raw.githubusercontent.com/gitskarios/Gitskarios/develop/media/icon/release/icon.png</string>
   <string name="delete_repository_file">Delete %s file</string>
 </resources>
