Update themes from activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -529,4 +529,5 @@
   <string name="invitation_custom_image">https://raw.githubusercontent.com/gitskarios/Gitskarios/develop/media/icon/release/icon.png</string>
   <string name="delete_repository_file">Delete %s file</string>
   <string name="write_otp_code_button">Check</string>
+  <string name="write_otp_code_error">Code cannot be empty</string>
 </resources>
