--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -468,6 +468,7 @@
   <string name="login_button_advanced">Advanced login</string>
   <string name="generateToken">Generate token</string>
   <string name="user_resume_about">About</string>
+  <string name="user_resume_contributions">Contributions</string>
   <string name="repositories">Repositories</string>
   <string name="user_resume_github">Github</string>
   <string name="events">EVENTS</string>
