--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -314,7 +314,8 @@
   <string name="pullrequest_merge_action_pending">Merge not computed</string>
   <string name="pullrequest_merge_action_valid">Merge</string>
   <string name="pullrequest_merge_action_invalid">Merge conflicts</string>
-  <string name="pull_request_delete_merged_branch">Delete merged branch</string>
+  <string name="pull_request_delete_branch">Delete branch</string>
+  <string name="pull_request_delete_branch_question">Delete branch?</string>
   <string name="merge_message">Merge message</string>
   <string name="merge_title">Merge</string>
   <string name="merge_content">Merging commit %s</string>
