#548 - Add functionality to remove head branch from pull request view  (#550)
* #548
- created separate reference service
- created get/patch/delete reference service clients
- added delete branch button to pull request detail issue view
- implemented delete branch button logic

-- need to fix some little issue with calls to server: view is created before check branch exist call

* #548
- resolved problem with refreshing pull request header item (previous commit)
- created GitReferenceService.HEADS string which should be added to every reference request
- after pull request data is received -> check if head branch exist; this information is showing for us when to display delete branch button
- changing color for delete button - red when pull request is closed but not merged, purple when it is closed and merged

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,6 +150,8 @@
   <string name="pullrequest_merge_action_pending">Merge not computed</string>
   <string name="pullrequest_merge_action_valid">Merge</string>
   <string name="pullrequest_merge_action_invalid">Merge conflicts</string>
+  <string name="pull_request_delete_branch">Delete branch</string>
+  <string name="pull_request_delete_branch_question">Delete branch?</string>
   <string name="merge_message">Merge message</string>
   <string name="merge_title">Merge</string>
   <string name="commit_file_add_del"><![CDATA[<b>%1$d</b> additions and <b>%2$d</b> deletions]]></string>
